# controllers/manager/landlordControllers.go
@@ -15,7 +15,7 @@ import (
 // @Description
 // @Tags accounts
 // @Accept  json
-// @Param  details body models.AddLandlord true "useraccountdetails"
+// @Param  details body models.AddLandLordProperty true "useraccountdetails"
 // @Produce  json
 // @Success 200 {object} models.HTTPRes
 // @Failure 400 {object} models.HTTPRes
@@ -91,7 +91,7 @@ func AddLandlordToProperty(c *gin.Context) {
 // @Description
 // @Tags accounts
 // @Accept  json
-// @Param  details body models.AddLandlord true "useraccountdetails"
+// @Param  details body models.AugmentProperty true "useraccountdetails"
 // @Produce  json
 // @Success 200 {object} models.HTTPRes
 // @Failure 400 {object} models.HTTPRes
