# controllers/manager/vendorControllers.go
@@ -11,7 +11,7 @@ import (
 // @Description
 // @Tags accounts
 // @Accept  json
-// @Param  details body models.AddLandlord true "useraccountdetails"
+// @Param  details body models.AugmentProperty true "useraccountdetails"
 // @Produce  json
 // @Success 200 {object} models.HTTPRes
 // @Failure 400 {object} models.HTTPRes
@@ -30,7 +30,7 @@ func AddVendorToProperty(c *gin.Context) {
 // @Description
 // @Tags accounts
 // @Accept  json
-// @Param  details body models.AddLandlord true "useraccountdetails"
+// @Param  details body models.AugmentProperty true "useraccountdetails"
 // @Produce  json
 // @Success 200 {object} models.HTTPRes
 // @Failure 400 {object} models.HTTPRes
